# tosic-utils

./: Cargo.toml
src/: error.rs  lib.rs  prelude.rs
src/db/: error.rs  filter.rs  mod.rs  runner.rs  test.rs
src/db/query/: create.rs  delete.rs  insert.rs  mod.rs  query_parts.rs  relate.rs  select.rs  traits.rs
src/utils/: mod.rs
src/utils/macros/: builder.rs  error_handling.rs  mod.rs  wrap_external.rs
surrealdb-abstractions/: Cargo.toml
surrealdb-abstractions/src/: lib.rs
surrealdb-abstractions/src/db/: filter.rs  test.rs
surrealdb-abstractions/src/db/query/: create.rs  delete.rs  insert.rs  mod.rs  query_parts.rs  relate.rs  select.rs  update.rs  upsert.rs
tosic-env-utils/: Cargo.toml
tosic-env-utils/src/: lib.rs  utils.rs
tosic-logging-utils/: Cargo.toml
tosic-logging-utils/src/: lib.rs
