[workspace]
members = [".", "surrealdb-abstractions", "tosic-env-utils", "tosic-logging-utils"]

[workspace.dependencies]
log = "0.4.22"
env_logger = "0.11.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
surrealdb-abstraction = { path = "./surrealdb-abstractions" }
tosic-logging-utils = { path = "./tosic-logging-utils" }
tosic-env-utils = { path = "./tosic-env-utils" }
dotenv-build = "0.1.1"
dotenv = "0.15.0"

[package]
name = "tosic-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
surrealdb-abstraction = { workspace = true, optional = true }
tosic-logging-utils = { workspace = true, optional = true }
tosic-env-utils = { workspace = true, optional = true }

[features]
default = []
db = ["surrealdb"]
surrealdb = ["dep:surrealdb-abstraction"]
logging = ["dep:tosic-logging-utils"]
log = ["logging", "tosic-logging-utils/log", "tosic-env-utils/log"]
tracing = ["logging", "tosic-logging-utils/tracing", "tosic-env-utils/tracing"]
env = ["dep:tosic-env-utils"]
