[package]
name = "surrealdb-abstraction"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
log = "0.4.22"
once_cell = "1.19.0"
surrealdb = { version = "1.5.4", features = ["kv-mem"] }
thiserror = "1.0.63"
serde = { version = "1.0.209", features = ["derive"] }
tokio = "1.40.0"

[dev-dependencies]
tosic-logging-utils = { workspace = true, features = ["log", "tracing"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []