[package]
name = "tosic-logging-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[features]
default = []
log = ["dep:log", "dep:env_logger"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]